<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".Activity.ProfileActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".Activity.ProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txt_username"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/name"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/textview_username" />

            <TextView
                android:id="@+id/textview_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/txt_followers"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toStartOf="@id/textview_following"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_name" />

            <TextView
                android:id="@+id/textview_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/txt_following"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textview_followers"
                app:layout_constraintTop_toBottomOf="@id/textview_name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/infoCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_16sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_following">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/textview_Location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textview_Company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_Location" />

                    <TextView
                        android:id="@+id/textview_Blog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_Company" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/notesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/notes"
                android:textSize="@dimen/_16sdp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="@id/infoCardView"
                app:layout_constraintTop_toBottomOf="@id/infoCardView" />

            <EditText
                android:id="@+id/edittext_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/hintnotes"
                app:layout_constraintStart_toStartOf="@id/notesLabel"
                app:layout_constraintTop_toBottomOf="@id/notesLabel" />

            <Button
                android:id="@+id/btn_userProfileSaveBtnn"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/savebutton"
                app:layout_constraintEnd_toEndOf="@id/edittext_notes"
                app:layout_constraintStart_toStartOf="@id/edittext_notes"
                app:layout_constraintTop_toBottomOf="@id/edittext_notes" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayoutprofile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/shimmer_placeholder_profile" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>